Fixes font size on mobile to prevent iOS focus zoom

--- a/style/typography.scss
+++ b/style/typography.scss
@@ -48,4 +48,10 @@
   font-weight: 400;
   font-size: 15px;
   line-height: 1.5;
+
+  @include breakpoint(xs, s) {
+    // font size needs to have a min size of 16px
+    // to prevent focus zoom on iOS
+    font-size: 16px;
+  }
 }
